--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:id="@+id/jump"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" " />
+        android:text="0" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
         android:id="@+id/fall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" " />
+        android:text="0" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
